...
            <View className="hidden w-full max-w-7xl flex-row items-center justify-between px-4 py-4 md:px-6 md:py-5 sm:mx-auto md:flex">
                {/* Logo */}
                <Link href="/" asChild>
                    <Text
                        testID='helphub-logo-text-desktop'
                        className="text-3xl font-extrabold tracking-wide text-red-500 md:text-4xl md:tracking-wider cursor-pointer">
                        HelpHub
                    </Text>
                </Link>

                {/* Search */}
                <View className="mx-4 flex-1 md:mx-8">
                    <TextInput
...

            <View>
                {/* Mobile Navbar */}
                <View className="flex w-full bg-[#f5f5f5] px-5 pb-6 pt-5 md:hidden">
                    <View className="flex-row items-center justify-between">
                        <Pressable
                            testID='MobileMenuHamburgerButton'
                            accessibilityRole="button"
                            accessibilityLabel={mobileMenuOpen ? 'Close mobile menu' : 'Open mobile menu'}
                            className="rounded-full p-2"
                            onPress={() => setMobileMenuOpen(!mobileMenuOpen)}
                        >
                            <IonIcons
                                name={mobileMenuOpen ? 'close-outline' : 'menu-outline'}
                                size={34}
...
                            />
                        </Pressable>

                        <Link href="/" asChild>
                            <Pressable>
                                <Text
                                    testID='helphub-logo-text-mobile'
                                    className="text-2xl font-extrabold tracking-[6px] text-red-500">
                                    HelpHub
                                </Text>
                            </Pressable>
                        </Link>

                        <View className="flex-row items-center gap-4">

                            <Pressable
                                accessibilityRole="button"
                                accessibilityLabel="Toggle account menu"
                                className="rounded-full p-2"
                                onPress={() => setMobileAccountMenuOpen(!mobileAccountMenuOpen)}
                            >
                                <IonIcons
                                    name="person-outline"
                                    size={30}
...
                                        } as any
                                        : { height: '100%' }
                                }
                            >
                                <View className="px-6 py-7 ">
                                    <Text className="text-lg font-bold text-black">
                                        {t('Main Menu')}
                                    </Text>
                                    <View className="mt-3 h-[3px] w-24 bg-red-500" />

                                    <Link href="/" asChild>
                                        <Pressable
                                            className="mt-8 flex-row items-center gap-4"
...
