{
  "SearchBar": {
    "desktopPlaceholder": "Suche nach Hilfe, Ressourcen oder Freiwilligen...",
    "mobilePlaceholder": "Suchen..."
  },
  "LoginPage": {
    "login": "Anmelden",
    "loggingIn": "Anmelden...",
    "email": "E-Mail-Adresse",
    "emailPlaceholder": "E-Mail eingeben",
...
