{
  "SearchBar": {
    "desktopPlaceholder": "Cerca aiuto, risorse o volontari...",
    "mobilePlaceholder": "Cerca..."
  },
  "LoginPage": {
    "login": "Accedi",
    "loggingIn": "Accesso in corso...",
    "email": "Indirizzo Email",
    "emailPlaceholder": "Inserisci la tua email",
...
