...
}

const megaMenuData: MegaMenuData = {
    forMyself: [
        {
            title: 'Mental Wellbeing',
            items: ['Psychology', 'Family Counseling', 'Sexual Therapy', 'Holistic Therapy', 'Life Coaching'],
        },
        {
            title: 'Physical Wellbeing',
            items: ['Dietitian', 'Sports', 'Style', 'Physiotherapy'],
        },
        {
...
