{
  "SearchBar": {
    "desktopPlaceholder": "Search for help, resources, or volunteers...",
    "mobilePlaceholder": "Search..."
  },
  "LoginPage": {
    "login": "Login",
    "loggingIn": "Logging in...",
    "email": "Email Address",
    "emailPlaceholder": "Write your email",
    "password": "Password",
    "passwordPlaceholder": "Write your password",
    "forgotPassword": "Forgot Password?",
    "noAccount": "Don't have an account?"
  },
  "SignupPage": {
    "signup": "Sign Up",
    "fullName": "Full Name",
...
      "title4": "Being a Consultant in AI Search",
      "title5": "TWhere Did We Lose Ourselves?",
      "title6": "Being Present vs Truly Being There"
    }
  },
  "footer": {
    "brand": "HelpHub",
    "companyLinks": {
      "howItWorks": "How it works?",
      "aboutUs": "About Us",
      "contact": "Contact",
      "blog": "Blog"
    },
...
