...
        } catch (err) {

            console.error('Login failed:', err);

            setLoginError(true);

            setErrorMessage('Invalid password/email');
        }
    };

    return (
        <ScrollView
            className={"bg-[#f5f5f5] z-[-999] " + (Platform.OS === 'ios' || Platform.OS === 'android' ? 'mt-16' : '')}
...
                        </View>

                        <RedButton
                            ButtonText={loading ? t("LoginPage.loggingIn") : t("LoginPage.login")} wfull={true} onPress={handleLogin}
                            // Disable the button while loading to prevent multiple submissions
                            disabled={loading}
                            testID='login-button'
                            {...loading && { Icon: { name: 'reload-circle-sharp', size: 18, color: 'white' }, rotatingIcon: true }}
                        />

                        <View className="mt-10 flex-row items-center justify-center sm:mt-12">
                            <Text className="text-base font-medium text-[#a1a7b4]">
                                {t("LoginPage.noAccount")}
...
                        {loginSuccess && (
                            <View className="mt-4 items-center">
                                <Text
                                    testID='login-success'
                                    className="text-base font-medium text-green-500"
                                >
                                    Login successful. Redirecting...
                                </Text>
                            </View>
                        )}
                    </View>
                </View>
            </View>
...
