appId: com.anonymous.helphubwebapp
---
- launchApp:
    clearState: true

- runFlow:
    label: "Check navbar is visible"
    commands:
        - extendedWaitUntil:
            visible:
              id: "MobileMenuHamburgerButton"
            timeout: 30000

        - assertVisible:
            id: "MobileMenuHamburgerButton"

        - assertVisible:
            id: "helphub-logo-text-mobile"

        - assertVisible: "Toggle account menu"

        - assertVisible:
            id: "mobile-language-button"


- runFlow: 
    label: "Check language menu is working"
    commands: 
        - tapOn: "Open language menu"
        - assertVisible:
            id: "en"
        - assertVisible:
            id: "it"
        - tapOn:
            id: "it"
        - assertVisible: "Cerca..."

        - tapOn: "Open language menu"
        - tapOn:
            id: "de"
        - assertVisible: "Suchen..."






