appId: com.anonymous.helphubwebapp
---
- launchApp:
    clearState: true

- runFlow:
    label: "Check navbar is visible"
    commands:
        - extendedWaitUntil:
            visible:
              id: "MobileMenuHamburgerButton"
            timeout: 30000

        - assertVisible:
            id: "MobileMenuHamburgerButton"

        - assertVisible:
            id: "helphub-logo-text-mobile"

        - assertVisible: "Toggle account menu"

        - assertVisible:
            id: "mobile-language-button"


- runFlow: 
    label: "Click the hamburger menu"
    commands: 
        - tapOn: "Open mobile menu"
        - assertVisible: "Main Menu"
        - assertVisible: "Toggle FOR MYSELF"
        - tapOn: "Toggle FOR MYSELF"
        - assertVisible: "Psychology"
        - tapOn: "Close mobile menu"
        - assertNotVisible: "Main Menu"



