appId: com.anonymous.helphub-webapp
---

- openLink: "com.anonymous.helphub-webapp://expo-development-client/?url=http%3A%2F%2F127.0.0.1%3A8081"

- runFlow:
    label : "Check app is running"
    commands: 
        - assertVisible: "HelpHub"
        - assertVisible: "Search..."

- runFlow:
    label: "Navigate To Login"
    commands:
      - tapOn: "Toggle account menu"
      - tapOn: "\uf3ce, Log In"


- runFlow:
    label: "Invalid Login Attempt"
    commands:
      - tapOn: "Write your email"
      - inputText: "Ahmed123@gmail.com"

      - tapOn:
          point: 0%,23%

      - tapOn: "Write your password"
      - inputText: "1234567"

      - tapOn:
          point: 0%,23%

      - tapOn:
          id: "login-button"

      - assertVisible: "Invalid password/email"

- runFlow:
    label: "Successful Login Attempt"
    commands:
      - tapOn: "Write your password"
      - eraseText
      - inputText: "123456"
      - tapOn:
          point: 2%,27%

      - tapOn:
          id: "login-button"

      - assertVisible: "Login successful. Redirecting..."

- runFlow:
    label: "Dismiss Save Password Dialog"
    commands:
      - tapOn: "Not Now"
